--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <meta charset="utf-8" />
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>My Portfolio Website</title>
+  </head>
+  <body>
+    <!-- NAV BAR -->
+    <nav
+      id="navbar-example2"
+      class="navbar fixed-top navbar-dark bg-transparent"
+    >
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link nav-item-style" href="#Home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-item-style" href="#Education">Education</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link nav-item-style dropdown-toggle"
+            data-toggle="dropdown"
+            href="#"
+            role="button"
+            aria-haspopup="true"
+            aria-expanded="false"
+            >Projects</a
+          >
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#front-end">Front-end</a>
+            <a class="dropdown-item" href="#back-end">back-end</a>
+            <div role="separator" class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#allProjects">All Projects</a>
+          </div>
+        </li>
+      </ul>
+    </nav>
+
+    <!-- CONTENT -->
+    <div
+      class="container"
+      data-spy="scroll"
+      data-target="#navbar-example2"
+      data-offset="0"
+    >
+      <!-- HOME SECTION -->
+      <div id="Home" class="heading">
+        <div class="row">
+          <div class="col-12 col-sm-6">
+            <h3 class="name">Raheem Tiamiyu</h3>
+            <h4 class="job-title text-center">Software Developer</h4>
+            <p>
+              We take inspiration from the World's best cuisines, and create a
+              unique fusion experience. Our lipsmacking creations will tickle
+              your culinary senses!
+            </p>
+            <a href="#Projects"
+              ><button type="button" class="btn btn-outline-warning">
+                Explore projects
+              </button></a
+            >
+          </div>
+          <div class="col-12 col-sm-6 justify-content-center">
+            <!-- contact me form -->
+            <div class="form-group contact-me-div">
+              <label for="Contact-Me">Contact Me!</label>
+              <textarea
+                class="form-control"
+                id="Contact-Me"
+                rows="10"
+                placeholder="Type something... Hints on how to make the website better will be apreciated"
+              ></textarea>
+
+              <button
+                type="button"
+                class="contact-button d-flex justify-content-center btn btn-block"
+              >
+                Send Message
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- EDUCATION SECTION -->
+      <div id="Education" class="heading">
+        <h4 class="edu col-12 text-center">Education</h4>
+        <!-- ICM -->
+        <div class="row edu-content align-items-center">
+          <div class="col-12 col-sm-4 col-md-3">
+            <h4>International College of Manitoba</h4>
+            <p class="subtext">
+              <span>From: </span>Aug 2019<span> <br />To: </span>Aug 2020
+            </p>
+          </div>
+          <div class="col col-sm">
+            <p>something i will write</p>
+            <ul>
+              <li class="gpa">GPA: 3.6/4.5</li>
+            </ul>
+          </div>
+        </div>
+        <!-- UOFM -->
+        <div class="row edu-content align-items-center">
+          <div class="col-12 col-sm-4 col-md-3">
+            <h4>University of Manitoba</h4>
+            <p class="subtext">
+              <span>From: </span>Aug 2020<span> <br />To: </span>Dec 2023
+            </p>
+          </div>
+          <div class="col col-sm">
+            <p>something i will write</p>
+            <ul>
+              <li class="gpa">GPA: 3.6/4.5</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- PROJECTS -->
+      <div class="row" class="heading">
+        <h3 id="allProjects">Projects</h3>
+      </div>
+
+      <!-- <p>...</p>
+      <h4 id="one">one</h4>
+      <p>...</p>
+      <h4 id="two">two</h4>
+      <p>...</p>
+      <h4 id="three">three</h4>
+      <p>...</p> -->
+    </div>
+  </body>
+</html>
