Scroll spy is now functional

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Portfolio Website</title>
   </head>
-  <body>
+  <body data-spy="scroll" data-target="#navbar-example2" data-offset="0">
     <!-- NAV BAR -->
     <nav
       id="navbar-example2"
@@ -63,12 +63,7 @@
     </nav>
 
     <!-- CONTENT -->
-    <div
-      class="container"
-      data-spy="scroll"
-      data-target="#navbar-example2"
-      data-offset="0"
-    >
+    <div class="container">
       <!-- HOME SECTION -->
       <div id="Home" class="heading">
         <div class="row">
@@ -144,7 +139,7 @@
       </div>
 
       <!-- PROJECTS -->
-      <div class="row" class="heading">
+      <div class="heading" class="row">
         <h3 id="allProjects">Projects</h3>
       </div>
 
