--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
     <meta charset="utf-8" />
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
     <meta name="description" content="" />
@@ -42,6 +46,7 @@
         <li class="nav-item">
           <a class="nav-link nav-item-style" href="#Education">Education</a>
         </li>
+
         <li class="nav-item dropdown">
           <a
             class="nav-link nav-item-style dropdown-toggle"
@@ -52,12 +57,31 @@
             aria-expanded="false"
             >Projects</a
           >
+
           <div class="dropdown-menu">
             <a class="dropdown-item" href="#front-end">Front-end</a>
             <a class="dropdown-item" href="#back-end">back-end</a>
             <div role="separator" class="dropdown-divider"></div>
             <a class="dropdown-item" href="#allProjects">All Projects</a>
           </div>
+        </li>
+        <!-- Socials -->
+      </ul>
+      <ul class="nav nav-pills align-items-end">
+        <li class="nav-item">
+          <a class="nav-link nav-item-style" href="#"
+            ><i class="bi bi-linkedin"></i
+          ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-item-style" href="#"
+            ><i class="bi bi-github"></i
+          ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-item-style" href="#"
+            ><i class="bi bi-twitter"></i
+          ></a>
         </li>
       </ul>
     </nav>
