Made css class names more general and styled the project header

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="form-group contact-me-div">
               <label for="Contact-Me">Contact Me!</label>
               <textarea
-                class="form-control"
+                class="form-control input"
                 id="Contact-Me"
                 rows="10"
                 placeholder="Type something... Hints on how to make the website better will be apreciated"
@@ -129,9 +129,9 @@
 
       <!-- EDUCATION SECTION -->
       <div id="Education" class="heading">
-        <h4 class="edu col-12 text-center">Education</h4>
+        <h4 class="section-header col-12 text-center">Education</h4>
         <!-- ICM -->
-        <div class="row edu-content align-items-center">
+        <div class="row sub-content align-items-center">
           <div class="col-12 col-sm-4 col-md-3">
             <h4>International College of Manitoba</h4>
             <p class="subtext">
@@ -146,7 +146,7 @@
           </div>
         </div>
         <!-- UOFM -->
-        <div class="row edu-content align-items-center">
+        <div class="row sub-content align-items-center">
           <div class="col-12 col-sm-4 col-md-3">
             <h4>University of Manitoba</h4>
             <p class="subtext">
@@ -163,8 +163,10 @@
       </div>
 
       <!-- PROJECTS -->
-      <div class="heading" class="row">
-        <h3 id="allProjects">Projects</h3>
+      <div class="heading row">
+        <h3 id="allProjects" class="section-header col-12 text-center">
+          Projects
+        </h3>
       </div>
 
       <!-- <p>...</p>
