--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
       </ul>
       <ul class="nav nav-pills align-items-end">
         <li class="nav-item">
-          <a class="nav-link nav-item-style" href="#"
+          <a
+            class="nav-link nav-item-style"
+            href="https://www.linkedin.com/in/raheem-tiamiyu-aa7511230/"
             ><i class="bi bi-linkedin"></i
           ></a>
         </li>
@@ -97,9 +99,10 @@
             <p>
               We take inspiration from the World's best cuisines, and create a
               unique fusion experience. Our lipsmacking creations will tickle
-              your culinary senses!
+              your culinary senses! I haven't had a client yet, but you can view
+              some of my personal projects.
             </p>
-            <a href="#Projects"
+            <a href="#allProjects"
               ><button type="button" class="btn btn-outline-warning">
                 Explore projects
               </button></a
@@ -107,7 +110,11 @@
           </div>
           <div class="col-12 col-sm-6 justify-content-center">
             <!-- contact me form -->
-            <div class="form-group contact-me-div">
+            <form
+              class="form-group contact-me-div"
+              action="mailto: raheemtiamiyu1@gmail.com"
+              method="POST"
+            >
               <label for="Contact-Me">Contact Me!</label>
               <textarea
                 class="form-control input"
@@ -117,12 +124,12 @@
               ></textarea>
 
               <button
-                type="button"
+                type="submit"
                 class="contact-button d-flex justify-content-center btn btn-block"
               >
                 Send Message
               </button>
-            </div>
+            </form>
           </div>
         </div>
       </div>
@@ -154,28 +161,119 @@
             </p>
           </div>
           <div class="col col-sm">
-            <p>something i will write</p>
+            <p>
+              After an accomplished year at the International College of
+              Manitoba, I was granted admission to the University of Manitoba
+            </p>
             <ul>
               <li class="gpa">GPA: 3.6/4.5</li>
+              <li>Relevant courses: Analysis of algorithm</li>
             </ul>
           </div>
         </div>
       </div>
 
       <!-- PROJECTS -->
-      <div class="heading row">
-        <h3 id="allProjects" class="section-header col-12 text-center">
-          Projects
-        </h3>
-      </div>
+      <div id="allProjects" class="heading">
+        <h3 class="section-header col-12 text-center">Projects</h3>
 
-      <!-- <p>...</p>
-      <h4 id="one">one</h4>
-      <p>...</p>
-      <h4 id="two">two</h4>
-      <p>...</p>
-      <h4 id="three">three</h4>
-      <p>...</p> -->
+        <div class="row sub-content align-items-center">
+          <div class="col-12 col-sm-4 col-md-3">
+            <!-- Carousel card -->
+            <div
+              class="card text-white bg-transparent mb-3"
+              style="width: 200px"
+            >
+              <div
+                id="fitnessAppCarousel"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <ol class="carousel-indicators">
+                  <li
+                    data-target="#fitnessAppCarousel"
+                    data-slide-to="0"
+                    class="active"
+                  ></li>
+                  <li data-target="#fitnessAppCarousel" data-slide-to="1"></li>
+                  <li data-target="#fitnessAppCarousel" data-slide-to="2"></li>
+                  <li data-target="#fitnessAppCarousel" data-slide-to="3"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      class="d-block w-100"
+                      src="./images/fitnessapp/g7.jpg"
+                      alt="First slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="./images/fitnessapp/loginpage.jpg"
+                      alt="Second slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="./images/fitnessapp/homepage.jpg"
+                      alt="Third slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="./images/fitnessapp/dailycalories.jpg"
+                      alt="Forth slide"
+                    />
+                  </div>
+                </div>
+                <a
+                  class="carousel-control-prev"
+                  href="#fitnessAppCarousel"
+                  role="button"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#fitnessAppCarousel"
+                  role="button"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class="card-body text-center">
+                <p class="card-text">My Fitness App</p>
+              </div>
+            </div>
+          </div>
+          <!-- end of carousel card -->
+          <div class="col col-sm">
+            <p>
+              This Fitness Tracker is designed to accompany a user in the
+              journey to physical wellness through tracking their fitness and
+              general caloric input/output. With an all-in-one extensive
+              approach, the fitness tracker aims to combine several aspects of
+              fitness tracking in to one application instead of having to
+              install several applications just to track your general fitness.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- projects div -->
     </div>
+    <!-- Container div -->
   </body>
 </html>
