--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
             <h3 class="name">Raheem Tiamiyu</h3>
             <h4 class="job-title text-center">Software Developer</h4>
             <p>
-              We take inspiration from the World's best cuisines, and create a
-              unique fusion experience. Our lipsmacking creations will tickle
-              your culinary senses! I haven't had a client yet, but you can view
-              some of my personal projects.
+              I am a Software Engineer Intern dedicated to improving skills
+              through hands-on learning and development work. Proficient in
+              mobile and desktop development environments. Adept at using HTML5,
+              JavaScript, and other programming languages to produce clean code.
+              Experienced in Agile methodology. School projects included
+              building apps, optimizing programs, and validating code
             </p>
             <a href="#allProjects"
               ><button type="button" class="btn btn-outline-warning">
@@ -177,6 +179,7 @@
       <div id="allProjects" class="heading">
         <h3 class="section-header col-12 text-center">Projects</h3>
 
+        <!-- Fitness app -->
         <div class="row sub-content align-items-center">
           <div class="col-12 col-sm-4 col-md-3">
             <!-- Carousel card -->
@@ -269,6 +272,100 @@
               fitness tracking in to one application instead of having to
               install several applications just to track your general fitness.
             </p>
+          </div>
+        </div>
+
+        <!-- Online Course app -->
+        <div class="row sub-content align-items-center">
+          <div class="col-12 col-sm-4 col-md-3">
+            <!-- Carousel card -->
+            <div
+              class="card text-white bg-transparent mb-3"
+              style="width: 200px"
+            >
+              <div
+                id="onlineCourseAppCarousel"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <ol class="carousel-indicators">
+                  <li
+                    data-target="#onlineCourseAppCarousel"
+                    data-slide-to="0"
+                    class="active"
+                  ></li>
+                  <li
+                    data-target="#onlineCourseAppCarousel"
+                    data-slide-to="1"
+                  ></li>
+                  <li
+                    data-target="#onlineCourseAppCarousel"
+                    data-slide-to="2"
+                  ></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      class="d-block w-100"
+                      src="./images/onlinecourse/frontpage.jpg"
+                      alt="First slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="./images/onlinecourse/results page.jpg"
+                      alt="Second slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="./images/onlinecourse/startexampage.jpg"
+                      alt="Third slide"
+                    />
+                  </div>
+                </div>
+                <a
+                  class="carousel-control-prev"
+                  href="#onlineCourseAppCarousel"
+                  role="button"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#onlineCourseAppCarousel"
+                  role="button"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class="card-body text-center">
+                <p class="card-text">Online Course</p>
+              </div>
+            </div>
+          </div>
+          <!-- end of carousel card -->
+          <div class="col col-sm">
+            <a
+              href="https://altosin-9b7.us-south.cf.appdomain.cloud/onlinecourse/"
+              ><button type="button" class="btn btn-outline-warning">
+                View website
+              </button></a
+            >
+
+            <p></p>
           </div>
         </div>
       </div>
