Created project tags that show what languages a project was built with

--- a/index.html
+++ b/index.html
@@ -272,6 +272,10 @@
               fitness tracking in to one application instead of having to
               install several applications just to track your general fitness.
             </p>
+            <div class="project-tags">
+              <p class="badge badge-pill">Java</p>
+              <p class="badge badge-pill">Android Studio</p>
+            </div>
           </div>
         </div>
 
@@ -358,14 +362,17 @@
           </div>
           <!-- end of carousel card -->
           <div class="col col-sm">
+            <p>Lorem pulis</p>
+            <div class="project-tags">
+              <p class="badge badge-pill">Python</p>
+              <p class="badge badge-pill">Django</p>
+            </div>
             <a
               href="https://altosin-9b7.us-south.cf.appdomain.cloud/onlinecourse/"
               ><button type="button" class="btn btn-outline-warning">
                 View website
               </button></a
             >
-
-            <p></p>
           </div>
         </div>
       </div>
