Made the nave bar opaque

--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
   </head>
   <body data-spy="scroll" data-target="#navbar-example2" data-offset="0">
     <!-- NAV BAR -->
-    <nav
-      id="navbar-example2"
-      class="navbar fixed-top navbar-dark bg-transparent"
-    >
+    <nav id="navbar-example2" class="navbar fixed-top navbar-dark bg-black">
       <ul class="nav nav-pills">
         <li class="nav-item">
           <a class="nav-link nav-item-style" href="#Home">Home</a>
@@ -362,17 +359,18 @@
           </div>
           <!-- end of carousel card -->
           <div class="col col-sm">
-            <p>Lorem pulis</p>
-            <div class="project-tags">
-              <p class="badge badge-pill">Python</p>
-              <p class="badge badge-pill">Django</p>
-            </div>
+            <p>This web application evaluates learners for an online course</p>
+
             <a
               href="https://altosin-9b7.us-south.cf.appdomain.cloud/onlinecourse/"
               ><button type="button" class="btn btn-outline-warning">
                 View website
               </button></a
             >
+            <div class="project-tags">
+              <p class="badge badge-pill">Python</p>
+              <p class="badge badge-pill">Django</p>
+            </div>
           </div>
         </div>
       </div>
