--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </p>
           </div>
           <div class="col col-sm">
-            <p>something i will write</p>
+            <!-- <p>something i will write</p> -->
             <ul>
               <li class="gpa">GPA: 3.6/4.5</li>
             </ul>
@@ -166,7 +166,13 @@
             </p>
             <ul>
               <li class="gpa">GPA: 3.6/4.5</li>
-              <li>Relevant courses: Analysis of algorithm</li>
+              <li>
+                Relevant courses: Analysis of algorithm, Data structures and
+                algorithms, Distributed Computing, Machine learning,
+                Object-oriented Programming, Operating System, Software
+                engineering
+              </li>
+              <li>Clubs: Devclub, Women In Computer Science (WICS)</li>
             </ul>
           </div>
         </div>
@@ -363,6 +369,103 @@
 
             <a
               href="https://altosin-9b7.us-south.cf.appdomain.cloud/onlinecourse/"
+              ><button type="button" class="btn btn-outline-warning">
+                View website
+              </button></a
+            >
+            <div class="project-tags">
+              <p class="badge badge-pill">Python</p>
+              <p class="badge badge-pill">Django</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Dealership Reviews -->
+        <div class="row sub-content align-items-center">
+          <div class="col-12 col-sm-4 col-md-3">
+            <!-- Carousel card -->
+            <div
+              class="card text-white bg-transparent mb-3"
+              style="width: 200px"
+            >
+              <div
+                id="dreviewsAppCarousel"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <ol class="carousel-indicators">
+                  <li
+                    data-target="#dreviewsAppCarousel"
+                    data-slide-to="0"
+                    class="active"
+                  ></li>
+                  <li data-target="#dreviewsAppCarousel" data-slide-to="1"></li>
+                  <li data-target="#dreviewsAppCarousel" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      class="d-block w-100"
+                      src="./images/dreviews/frontpage.jpg"
+                      alt="First slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="./images/dreviews/review.jpg"
+                      alt="Second slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="./images/dreviews/review.jpg"
+                      alt="Third slide"
+                    />
+                  </div>
+                </div>
+                <a
+                  class="carousel-control-prev"
+                  href="#dreviewsAppCarousel"
+                  role="button"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#dreviewsAppCarousel"
+                  role="button"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class="card-body text-center">
+                <p class="card-text">Dealership Reviews</p>
+              </div>
+            </div>
+          </div>
+          <!-- end of carousel card -->
+          <div class="col col-sm">
+            <p>
+              This web application allows users to view and write reviews of
+              different car dealerships in the United States. It employs the use
+              of a Natural Language Understanding microservice to analyse a
+              review and displays the appropirate emoji based on the results
+            </p>
+
+            <a
+              href="https://dreviewer-97b.us-south.cf.appdomain.cloud/djangoapp/"
               ><button type="button" class="btn btn-outline-warning">
                 View website
               </button></a
