Fixed a typo in the dealership review description

--- a/index.html
+++ b/index.html
@@ -458,10 +458,11 @@
           <!-- end of carousel card -->
           <div class="col col-sm">
             <p>
-              This web application allows users to view and write reviews of
-              different car dealerships in the United States. It employs the use
-              of a Natural Language Understanding microservice to analyse a
-              review and displays the appropirate emoji based on the results
+              This microservice web application allows users to view and write
+              reviews of different car dealerships in the United States. It
+              employs the use of a Natural Language Understanding microservice
+              to analyse a review and displays the appropirate emoji based on
+              the results
             </p>
 
             <a
