update project images

--- a/index.html
+++ b/index.html
@@ -90,16 +90,15 @@
       <!-- HOME SECTION -->
       <div id="Home" class="heading">
         <div class="row">
-          <div class="col-12 col-sm-6">
+          <div class="col-12 col-md-6">
             <h3 class="name">Raheem Tiamiyu</h3>
-            <h4 class="job-title text-center">Software Developer</h4>
+            <h4 class="job-title text-center">Software Engineer</h4>
             <p>
-              I am a Software Engineer Intern dedicated to improving skills
-              through hands-on learning and development work. Proficient in
-              mobile and desktop development environments. Adept at using HTML5,
-              JavaScript, and other programming languages to produce clean code.
-              Experienced in Agile methodology. School projects included
-              building apps, optimizing programs, and validating code
+              I'm a technical individual with a passion for advanced software
+              engineering. With proficiency in React, JavaScript, NodeJS,
+              Django, and SQL, I have a passion for web technologies. Let's
+              connect and explore opportunities to innovate and create impactful
+              software together.
             </p>
             <a href="#allProjects"
               ><button type="button" class="btn btn-outline-warning">
@@ -107,10 +106,10 @@
               </button></a
             >
           </div>
-          <div class="col-12 col-sm-6 justify-content-center">
+          <div class="col-12 col-md-6 contact-me-div">
             <!-- contact me form -->
             <form
-              class="form-group contact-me-div"
+              class="form-group w-100"
               action="mailto: raheemtiamiyu1@gmail.com"
               method="POST"
             >
@@ -118,7 +117,7 @@
               <textarea
                 class="form-control input"
                 id="Contact-Me"
-                rows="10"
+                rows="12"
                 placeholder="Type something... Hints on how to make the website better will be apreciated"
               ></textarea>
 
@@ -138,7 +137,7 @@
         <h4 class="section-header col-12 text-center">Education</h4>
         <!-- ICM -->
         <div class="row sub-content align-items-center">
-          <div class="col-12 col-sm-4 col-md-3">
+          <div class="col-12 col-sm-4 col-md-4">
             <h4>International College of Manitoba</h4>
             <p class="subtext">
               <span>From: </span>Aug 2019<span> <br />To: </span>Aug 2020
@@ -153,7 +152,7 @@
         </div>
         <!-- UOFM -->
         <div class="row sub-content align-items-center">
-          <div class="col-12 col-sm-4 col-md-3">
+          <div class="col-12 col-sm-4 col-md-4">
             <h4>University of Manitoba</h4>
             <p class="subtext">
               <span>From: </span>Aug 2020<span> <br />To: </span>Dec 2023
@@ -184,12 +183,9 @@
 
         <!-- Fitness app -->
         <div class="row sub-content align-items-center">
-          <div class="col-12 col-sm-4 col-md-3">
+          <div class="col-12 col-sm-12 col-md-6 mb-4">
             <!-- Carousel card -->
-            <div
-              class="card text-white bg-transparent mb-3"
-              style="width: 200px"
-            >
+            <div class="carousel-div card text-white bg-transparent mb-3">
               <div
                 id="fitnessAppCarousel"
                 class="carousel slide"
@@ -284,12 +280,9 @@
 
         <!-- Online Course app -->
         <div class="row sub-content align-items-center">
-          <div class="col-12 col-sm-4 col-md-3">
+          <div class="col-12 col-sm-12 col-md-6">
             <!-- Carousel card -->
-            <div
-              class="card text-white bg-transparent mb-3"
-              style="width: 200px"
-            >
+            <div class="carousel-div card text-white bg-transparent mb-3">
               <div
                 id="onlineCourseAppCarousel"
                 class="carousel slide"
@@ -382,12 +375,9 @@
 
         <!-- Dealership Reviews -->
         <div class="row sub-content align-items-center">
-          <div class="col-12 col-sm-4 col-md-3">
+          <div class="col-12 col-sm-12 col-md-6">
             <!-- Carousel card -->
-            <div
-              class="card text-white bg-transparent mb-3"
-              style="width: 200px"
-            >
+            <div class="carousel-div card text-white bg-transparent mb-3">
               <div
                 id="dreviewsAppCarousel"
                 class="carousel slide"
