--- a/index.html
+++ b/index.html
@@ -179,7 +179,117 @@
 
       <!-- PROJECTS -->
       <div id="allProjects" class="heading">
-        <h3 class="section-header col-12 text-center">Projects</h3>
+        <h3 class="section-header col-12 text-center">PROJECTS</h3>
+
+        <!-- ShopX -->
+        <div class="row sub-content align-items-center">
+          <div class="col-12 col-sm-12 col-md-6 mb-4">
+            <!-- Carousel card -->
+            <div class="carousel-div card text-white bg-transparent mb-3">
+              <div
+                id="shopxCarousel"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <ol class="carousel-indicators">
+                  <li
+                    data-target="#shopxCarousel"
+                    data-slide-to="0"
+                    class="active"
+                  ></li>
+                  <li data-target="#shopxCarousel" data-slide-to="1"></li>
+                  <li data-target="#shopxCarousel" data-slide-to="2"></li>
+                  <li data-target="#shopxCarousel" data-slide-to="3"></li>
+                  <li data-target="#shopxCarousel" data-slide-to="4"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      class="d-block w-100"
+                      src="./images/shopx/adminHdS.png"
+                      alt="First slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="./images/shopx/adminOrders.png"
+                      alt="Second slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="./images/shopx/kgcontact.png"
+                      alt="Third slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="./images/shopx/kghome.png"
+                      alt="Forth slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="./images/shopx/kgtopsellers.png"
+                      alt="Forth slide"
+                    />
+                  </div>
+                </div>
+                <a
+                  class="carousel-control-prev"
+                  href="#shopxCarousel"
+                  role="button"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#shopxCarousel"
+                  role="button"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class="card-body text-center">
+                <p class="card-text">SHOPX</p>
+              </div>
+            </div>
+          </div>
+          <!-- end of carousel card -->
+          <div class="col col-sm">
+            <p>
+              This project is a comprehensive E-Commerce Website Builder and
+              Management Application tailored for entrepreneurs. It empowers
+              users to effortlessly create, manage, and optimize their online
+              stores.
+            </p>
+            <a href="https://myshopx.net"
+              ><button type="button" class="btn btn-outline-warning">
+                View website
+              </button></a
+            >
+            <div class="project-tags">
+              <p class="badge badge-pill">MongoDB</p>
+              <p class="badge badge-pill">Express</p>
+              <p class="badge badge-pill">React</p>
+              <p class="badge badge-pill">NodeJS</p>
+            </div>
+          </div>
+        </div>
 
         <!-- Fitness app -->
         <div class="row sub-content align-items-center">
@@ -204,28 +314,28 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img
-                      class="d-block w-100"
+                      class="d-block w-75"
                       src="./images/fitnessapp/g7.jpg"
                       alt="First slide"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
-                      class="d-block w-100"
+                      class="d-block w-75"
                       src="./images/fitnessapp/loginpage.jpg"
                       alt="Second slide"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
-                      class="d-block w-100"
+                      class="d-block w-75"
                       src="./images/fitnessapp/homepage.jpg"
                       alt="Third slide"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
-                      class="d-block w-100"
+                      class="d-block w-75"
                       src="./images/fitnessapp/dailycalories.jpg"
                       alt="Forth slide"
                     />
